# cmake-wix-testsuite

./: CMakeLists.txt  test_wrapper.cmake
arp_properties/: CMakeLists.txt
basic/: CMakeLists.txt
components/: CMakeLists.txt  mylib.cpp  mylib.h
custom_action_with_condition/: CMakeLists.txt  hw.cpp  patch.xml
custom_program_menu_folder/: CMakeLists.txt
custom_template_by_variable/: CMakeLists.txt  mywix.template.in
custom_template_in_module_path/: CMakeLists.txt
desktop_shortcut/: CMakeLists.txt
extra_sources/: CMakeLists.txt  extra.bar.wxs  extra.foo.wxs  features.wxs  patch.xml
feature_patch/: CMakeLists.txt  patch.xml
feature_ref_in_product/: CMakeLists.txt  patch.xml
fragment_injection/: CMakeLists.txt  patch.xml
fragment_injection_with_bad_id/: patch.xml
package_executables/: CMakeLists.txt
package_install_directory/: CMakeLists.txt
package_registry/: CMakeLists.txt  FancyWiXLibConfig.cmake  fancy.cpp
package_registry2/: CMakeLists.txt  fancy.hpp
product_fragment_injection/: CMakeLists.txt  patch.xml.in
properties/: CMakeLists.txt
property_desktop_shortcuts/: CMakeLists.txt
property_start_menu_shortcuts/: CMakeLists.txt
property_startup_shortcuts/: CMakeLists.txt
read_only/: CMakeLists.txt
rtf_writer_unicode/: CMakeLists.txt  license.txt
space_in_path/: CMakeLists.txt
two_components/: CMakeLists.txt
ui_bitmaps_and_icon/: .CMakeLists.txt.swp  CMakeLists.txt
umlaut_in_path/: CMakeLists.txt
wix_cultures/: CMakeLists.txt
wix_util_extension/: CMakeLists.txt  mywix.template.in
